# SOSVR2016

behaviour/: CMakeLists.txt  behaviour.py  package.xml
behaviour/behaviour_smach/src/: behaviour_script.py
behaviour/scripts/: listener.py
behaviour/src/: behaviour.py  simple_goal.py
bring_up/: CMakeLists.txt  README.md  gz_env.sh  package.xml
bring_up/launch/: bring_up.launch  bring_up.launch~  bring_up_spawn.launch  display_xacro.launch  main.launch~  pioneer3at_gazebo.launch
bring_up/models/: my_pioneer3at.sdf
bring_up/models/my_camera/: model.sdf
bring_up/models/my_hokuyo/: model.sdf
bring_up/models/my_pioneer3at/: model.sdf  model.sdf~
bring_up/models/pioneer3at/: model.sdf
bring_up/models/victimWoman/: model.sdf
bring_up/models/victimWoman/girl-brunette-dae/: girl-brunette.dae
bring_up/worlds/: PortMessa.world  USARGazebo.world
cognition/HOG_TRAINER/: Readme.md  opencvhogtrainer
cognition/extra/MYHOGTRAINER/: main.cpp  opencvhogtrainer
cognition/frameSaver/: CMakeLists.txt
cognition/human_detector/: CMakeLists.txt
cognition/human_detector/msg/: detectedobjectsMsg.msg
cognition/human_detector/src/: my_subscriber.cpp
cognition/human_detector/xml/: cvHOGClassifier.yaml  cvHOGClassifier2.yaml
cognition/human_recognition/body_detector/: CMakeLists.txt
husky/: README.md
motion/motion_controller/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
motion/move_controller/: CMakeLists.txt~  package.xml  package.xml~  setup.py
rqt_sosvr_controller/scripts/: rqt_mypkg~
(+101 files in other folders)
